添加生命周期监听

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,43 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+/**
+ * 配置阶段开始前的监听回调
+ */
+this.beforeEvaluate {
+    println '配置阶段开始111...'
+}
+
+/**
+ * 配置阶段后的监听回调
+ */
+this.afterEvaluate {
+    println '配置阶段执行完毕222...'
+}
+
+/**
+ * gradle执行完毕后的回调
+ */
+this.gradle.buildFinished {
+    println '执行阶段执行完毕...'
+}
+
+
+//等同于 beforeEvaluate
+this.gradle.beforeProject {
+
+}
+
+//等同于 afterEvaluate
+this.gradle.afterProject {
+    println '配置阶段执行完毕333...'
+}
+
+
+
+
+
+
+
+
