--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.zhj.pp.HelloPlugin'
 
 android {
     compileSdkVersion 28
@@ -34,3 +35,19 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
